--- a/src/components/ProjectsLayout/ProjectLayouts.astro
+++ b/src/components/ProjectsLayout/ProjectLayouts.astro
@@ -47,8 +47,8 @@ const data = Astro.props;
   <div class="grid md:grid-cols-2 md:gap-4 mt-10">
     {
       data.projectData?.map((projectItem) => {
-        console.log("Project",projectItem)
-        
+        console.log("Project", projectItem);
+
         return (
           <>
             <div class="project_container">
@@ -68,11 +68,14 @@ const data = Astro.props;
                       {projectItem?.projectName}
                     </div>
                     <p class=" text-base  font-Roboto font-normal">
-                      <PortableText class="font-normal md:text-base text-sm mb-2 font-Roboto truncate ..." value={projectItem?.excerpt} />
+                      <PortableText
+                        class="font-normal md:text-base text-sm mb-2 font-Roboto truncate ..."
+                        value={projectItem?.excerpt}
+                      />
                     </p>
                   </div>
                   <div class="px-6 pt-4 pb-2">
-                    {projectItem.tags.map((tagsItem) => {
+                    {projectItem?.tags?.map((tagsItem) => {
                       return (
                         <>
                           <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-lg font-medium font-Roboto mr-2 mb-2">
