--- a/src/components/BlogLayout/BlogLayout.astro
+++ b/src/components/BlogLayout/BlogLayout.astro
@@ -45,34 +45,37 @@ console.log("Blog layout", data);
 </script>
 
 <section class="portfolio-section container mx-auto font-Roboto">
-  <div class="grid grid-cols-2 gap-4 mt-10">
+  <div class="grid grid-cols-2 gap-4 mt-10 ">
     {
       data?.blogData?.map((blogItem) => {
         console.log("itemS:", blogItem);
         return (
           <>
-            <Link
-              href={`/blogs/${blogItem.slug?.current}`}
-              externalInNewTab={true}
-            >
-              <div class="max-w-full rounded overflow-hidden shadow-lg">
-                <img
-                  class="w-full"
-                  src={`${blogItem?.BackgroundImage?.asset?.url}`}
-                  alt="Sunset in the mountains"
-                />
-                <div class="px-6 py-4">
-                  <div class="font-extrabold text-3xl mb-2">
-                    {blogItem?.projectName}
+            <div>
+              {" "}
+              <Link
+                href={`/blogs/${blogItem.slug?.current}`}
+                externalInNewTab={true}
+              >
+                <div class="max-w-full rounded overflow-hidden bg-white shadow-lg">
+                  <img
+                    class="w-full"
+                    src={`${blogItem?.BackgroundImage?.asset?.url}`}
+                    alt="Sunset in the mountains"
+                  />
+                  <div class="px-6 py-4">
+                    <div class="font-extrabold text-3xl mb-2">
+                      {blogItem?.projectName}
+                    </div>
+                    <p class="text-gray-700 text-base">
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                      Voluptatibus quia, nulla! Maiores et perferendis eaque,
+                      exercitationem praesentium nihil.
+                    </p>
                   </div>
-                  <p class="text-gray-700 text-base">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Voluptatibus quia, nulla! Maiores et perferendis eaque,
-                    exercitationem praesentium nihil.
-                  </p>
                 </div>
-              </div>
-            </Link>
+              </Link>
+            </div>
           </>
         );
       })
@@ -88,29 +91,6 @@ console.log("Blog layout", data);
     height: 100%;
   }
 
-  a {
-    font-family: Montserrat;
-    position: relative;
-    text-decoration: none;
-  }
-
-  a:after {
-    content: "";
-    position: absolute;
-    width: 0;
-    height: 2px;
-    display: block;
-    margin-top: 0px;
-    left: 0%;
-    background: black;
-    transition: width 0.3s ease;
-  }
-
-  a:hover:after {
-    width: 100%;
-    left: 0%;
-    background: black;
-  }
 
   .cursor {
     width: 50px;
