--- a/src/components/ProjectsLayout/ProjectDetails.astro
+++ b/src/components/ProjectsLayout/ProjectDetails.astro
@@ -7,9 +7,9 @@ console.log("Details", data);
 
 <section>
   <div
-    class="projects_details container mx-auto bg-gray-100 rounded-lg shadow-lg overflow-hidden"
+    class="projects_details text-white container mx-auto bg-transparent rounded-2xl m-12 shadow-2xl overflow-hidden p-12 md:p-12"
   >
-    <h1 class="text-2xl py-4 text-center">
+    <h1 class="text-2xl py-4 text-center md:text-left">
       {data?.detailsData?.projectName}
     </h1>
     <img src={`${data?.detailsData?.BackgroundImage?.asset?.url}`} />
