--- a/src/components/BlogLayout/BlogDetails.astro
+++ b/src/components/BlogLayout/BlogDetails.astro
@@ -1,24 +1,45 @@
 ---
 const data = Astro.props;
-
+import { Link } from "astro-link";
 import { PortableText } from "astro-portabletext";
 
 console.log("Details", data);
 ---
 
-<section>
-  <div
-    class="blog_details container mx-auto bg-gray-100 rounded-lg shadow-lg overflow-hidden"
-  >
-    <h1 class="text-2xl py-4 text-center">
-      {data?.detailsData?.projectName}
-    </h1>
-    <img src={`${data?.detailsData?.BackgroundImage?.asset?.url}`} />
-    <div class="px-4 py-4">
-      <PortableText
-        class="text-xl mb-2 font-Roboto"
-        value={data?.detailsData?.projectcontent}
-      />
+<section class="blog_details container mx-auto overflow-hidden p-12">
+  <div class="grid md:grid-cols-3 gap-12">
+    <div class="left-section col-span-2">
+      <h1 class="text-3xl font-Roboto py-4 md:text-left text-center">
+        {data?.detailsData?.projectName}
+      </h1>
+      <img src={`${data?.detailsData?.BackgroundImage?.asset?.url}`} />
+      <div class="px-4 py-4">
+        <PortableText
+          class="text-xl mb-2 font-Roboto blog-content"
+          value={data?.detailsData?.blogcontent}
+        />
+      </div>
+    </div>
+    <div class="right-section col-span-1   text-white">
+      <h1 class="text-3xl font-Roboto py-4 md:text-left text-center">
+        Popular Blogs
+      </h1>
+      <Link 
+      href={`/blogs/${data?.detailsData?.slug?.current}`}
+
+      >
+        <div class="grid grid-cols-2 justify-center gap-4">
+          <img
+            src={`${data?.detailsData?.BackgroundImage?.asset?.url}`}
+            class="col-span-1 w-full rounded-sm"
+          />
+          <div class="col-span-1 justify-start">
+            <h1 class="text-xl font-roboto md:text-left text-center">
+              {data?.detailsData?.projectName}
+            </h1>
+          </div>
+        </div><Link
+      >
     </div>
   </div>
 </section>
