--- a/src/components/ProjectsLayout/ProjectLayouts.astro
+++ b/src/components/ProjectsLayout/ProjectLayouts.astro
@@ -5,50 +5,10 @@ import { PortableText } from "astro-portabletext";
 const data = Astro.props;
 ---
 
-<script>
-  var cursor = document.querySelector(".cursor");
-  var cursorinner = document.querySelector(".cursor2");
-  var a = document.querySelectorAll("a");
-
-  document.addEventListener("mousemove", function (e) {
-    var x = e.clientX;
-    var y = e.clientY;
-    cursor.style.transform = `translate3d(calc(${e.clientX}px - 50%), calc(${e.clientY}px - 50%), 0)`;
-  });
-
-  document.addEventListener("mousemove", function (e) {
-    var x = e.clientX;
-    var y = e.clientY;
-    cursorinner.style.left = x + "px";
-    cursorinner.style.top = y + "px";
-  });
-
-  document.addEventListener("mousedown", function () {
-    cursor.classList.add("click");
-    cursorinner.classList.add("cursorinnerhover");
-  });
-
-  document.addEventListener("mouseup", function () {
-    cursor.classList.remove("click");
-    cursorinner.classList.remove("cursorinnerhover");
-  });
-
-  a.forEach((item) => {
-    item.addEventListener("mouseover", () => {
-      cursor.classList.add("hover");
-    });
-    item.addEventListener("mouseleave", () => {
-      cursor.classList.remove("hover");
-    });
-  });
-</script>
-
 <section class="project-section container mx-auto font-Roboto">
   <div class="grid md:grid-cols-2 md:gap-4 mt-10">
     {
       data.projectData?.map((projectItem) => {
-        console.log("Project", projectItem);
-
         return (
           <>
             <div class="project_container">
@@ -86,8 +46,8 @@ const data = Astro.props;
                     })}
                   </div>
                   <div class="px-6 pt-4 pb-2">
-                    <a>Github link</a>&nbsp;|&nbsp;
-                    <a>Demo Link</a>&nbsp;|&nbsp;
+                    <a href={projectItem?.gitHubLink?.current}>Github link</a>&nbsp;|&nbsp;
+                    <a href={projectItem?.demoLink?.current}>Demo Link</a>&nbsp;|&nbsp;
                   </div>
                 </div>
               </Link>
@@ -96,7 +56,5 @@ const data = Astro.props;
         );
       })
     }
-    <div class="cursor"></div>
-    <div class="cursor2"></div>
   </div>
 </section>
