--- a/src/components/ProjectsLayout/ProjectDetails.astro
+++ b/src/components/ProjectsLayout/ProjectDetails.astro
@@ -12,7 +12,7 @@ console.log("Details", data);
     <h1 class="text-2xl py-4 text-center md:text-left">
       {data?.detailsData?.projectName}
     </h1>
-    <img src={`${data?.detailsData?.BackgroundImage?.asset?.url}`} />
+    <img src={`${data?.detailsData?.BackgroundImage?.asset?.url}`} class=" max-w-auto" />
     <div class="px-4 py-4">
       <PortableText
         class="text-xl mb-2 font-Roboto"
