--- a/src/components/BlogLayout/BlogDetails.astro
+++ b/src/components/BlogLayout/BlogDetails.astro
@@ -6,7 +6,7 @@ import { PortableText } from "astro-portabletext";
 console.log("Details", data);
 ---
 
-<section class="blog_details container mx-auto overflow-hidden p-12">
+<section class="blog_details font-Roboto container mx-auto overflow-hidden p-12">
   <div class="grid md:grid-cols-3 gap-12">
     <div class="left-section col-span-2">
       <h1 class="text-3xl font-Roboto py-4 md:text-left text-center">
