--- a/src/components/HomeLayout.astro
+++ b/src/components/HomeLayout.astro
@@ -22,7 +22,7 @@ const projectData = await useSanityClient().fetch(query);
 const blogData = await useSanityClient().fetch(blogquery);
 ---
 
-<section class="home-section px-4">
+<section class="home-section px-4 font-Roboto">
   <div class="container mx-auto">
     <div class="grid grid-cols-1 text-center text-white">
       <div
@@ -152,12 +152,13 @@ const blogData = await useSanityClient().fetch(blogquery);
                       </h5>
                     </a>
                     <PortableText
-                      class="text-xl mb-2 text-gray-900 font-Roboto blog-content"
+                      class="text-sm mb-2 text-gray-900  blog-content"
                       value={projectItem?.excerpt}
                     />
                     <a
-                      href="#"
-                      class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+                      href={`/blogs/${projectItem.slug.current}`}
+
+                      class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-buttonBg rounded-lg hover:bg-yellow-400  hover:text-black focus:ring-4 focus:outline-none "
                     >
                       Read more
                       <svg
