--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -29,7 +29,7 @@ const firstPost = await useSanityClient().fetch(query);
           <p class="text-black 
           font-Roboto
           hover:shadow-xl transition-transform duration-200 transform hover:scale-105
-          md:text-white border border-white rounded-3xl p-2"> T/P</p>
+          md:text-white border border-white rounded-3xl text-lg p-2"> T/P</p>
         <!-- <Icon name="logo"/> -->
         </a>
       </div>
@@ -63,7 +63,7 @@ const firstPost = await useSanityClient().fetch(query);
            
               <li class="transition-transform duration-200 transform hover:scale-105">
                 <a
-                  class="text-2xl font-medium font-Roboto px-5 py-1"
+                  class="text-lg font-medium font-Roboto px-5 py-1  hover:text-slate-400"
                   href={menuItem.menuLink.current}
                 >
                   {menuItem.menuName}
