--- a/src/components/HomeLayout.astro
+++ b/src/components/HomeLayout.astro
@@ -28,12 +28,12 @@ const blogData = await useSanityClient().fetch(blogquery);
       <div
         class="about_section border-e-red-50 flex flex-col items-center justify-center lg:p-24 p-0 m-10 md:m-24 font-Roboto"
       >
-        <h1 class="text-5xl p- m-2">Hii, This Is Tanuj</h1>
-        <p class="text-3xl p-2 m-2">Frontend Developer!</p>
+        <h1 class="text-4xl py-3">Hii, This Is Tanuj</h1>
+        <p class="text-3xl  py-3">Frontend Developer!</p>
         <!-- Button trigger modal -->
         <button
           type="button"
-          class="btn btn-primary text-2xl p-3 m-3"
+          class="btn btn-primary text-2xl py-3"
           data-toggle="modal"
         >
           Get Resume
