--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -177,11 +177,12 @@ const { title } = Astro.props;
   /* .....Blog details */
 
   .blog-content a{
-    color: white;
+    color: var(--accent-color);
+ 
   }
   
   .blog-content a:hover{
-    color:#8CB9BD;
+    color:var(--bg2);
     transition: all ease-in 0.5s;
     text-decoration: underline;
   }
