--- a/src/components/BlogLayout/BlogDetails.astro
+++ b/src/components/BlogLayout/BlogDetails.astro
@@ -6,16 +6,16 @@ import { PortableText } from "astro-portabletext";
 console.log("Details", data);
 ---
 
-<section class="blog_details font-Roboto container mx-auto overflow-hidden p-12">
-  <div class="grid md:grid-cols-3 gap-12">
-    <div class="left-section col-span-2">
-      <h1 class="text-3xl font-Roboto py-4 md:text-left text-center">
+<section class="blog_details font-Roboto container mx-auto overflow-hidden md:p-12 px-2">
+  <div class="grid md:grid-cols-3 grid-cols-1 md:gap-12">
+    <div class="left-section col-span-2 text-white">
+      <h1 class="md:text-3xl text-xl font-Roboto py-4 md:text-left  text-center">
         {data?.detailsData?.projectName}
       </h1>
       <img src={`${data?.detailsData?.BackgroundImage?.asset?.url}`} />
       <div class="px-4 py-4">
         <PortableText
-          class="text-xl mb-2 font-Roboto blog-content"
+          class="md:text-lg text-base py-1 text-pretty mb-2 font-Roboto blog-content"
           value={data?.detailsData?.blogcontent}
         />
       </div>
@@ -28,7 +28,7 @@ console.log("Details", data);
       href={`/blogs/${data?.detailsData?.slug?.current}`}
 
       >
-        <div class="grid grid-cols-2 justify-center gap-4">
+        <div class="grid md:grid-cols-2 grid-cols-1 justify-center gap-4">
           <img
             src={`${data?.detailsData?.BackgroundImage?.asset?.url}`}
             class="col-span-1 w-full rounded-sm"
