--- a/src/components/ProjectsLayout/ProjectDetails.astro
+++ b/src/components/ProjectsLayout/ProjectDetails.astro
@@ -7,7 +7,7 @@ console.log("Details", data);
 
 <section>
   <div
-    class="projects_details text-white container mx-auto bg-transparent rounded-2xl m-12 shadow-2xl overflow-hidden p-12 md:p-12"
+    class="projects_details text-white container mx-auto bg-transparent rounded-2xl  shadow-2xl overflow-hidden px-4 md:p-12"
   >
     <h1 class="text-2xl py-4 text-center md:text-left">
       {data?.detailsData?.projectName}
@@ -15,7 +15,7 @@ console.log("Details", data);
     <img src={`${data?.detailsData?.BackgroundImage?.asset?.url}`} class=" max-w-auto" />
     <div class="px-4 py-4">
       <PortableText
-        class="text-xl mb-2 font-Roboto"
+        class="text-base py-1 mb-2 font-Roboto"
         value={data?.detailsData?.projectcontent}
       />
     </div>
