--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -33,7 +33,7 @@ const firstPost = await useSanityClient().fetch(query);
         <!-- <Icon name="logo"/> -->
         </a>
       </div>
-
+<!-- Menu Button -->
       <svg
         xmlns="http://www.w3.org/2000/svg"
         id="menu-button"
@@ -49,6 +49,7 @@ const firstPost = await useSanityClient().fetch(query);
           d="M4 6h16M4 12h16M4 18h16"></path>
       </svg>
 
+      <!-- Nav Link -->
       <div class="hidden w-full md:flex md:items-center md:w-auto" id="menu">
         <ul
           class="pt-4
