--- a/src/components/HomeLayout.astro
+++ b/src/components/HomeLayout.astro
@@ -22,21 +22,23 @@ const projectData = await useSanityClient().fetch(query);
 const blogData = await useSanityClient().fetch(blogquery);
 ---
 
-<section class="home-section px-4 font-Roboto ">
+
+
+<section class="home-section px-4 font-Roboto">
   <div class="container mx-auto">
     <div class="grid grid-cols-1 text-center text-white">
       <div
         class="about_section border-e-red-50 flex flex-col items-center justify-center lg:p-24 p-0 m-10 md:m-24 font-Roboto"
       >
         <h1 class="text-4xl py-3">Hii, This Is Tanuj</h1>
-        <p class="text-3xl  py-3">Frontend Developer!</p>
+        <p class="text-3xl py-3">Frontend Developer!</p>
         <!-- Button trigger modal -->
         <button
           type="button"
-          class="btn btn-primary text-2xl py-3"
-          data-toggle="modal"
+          class="btn btn-primary text-2xl py-3 hover:text-slate-400"
+          onclick="downloadResume()"
         >
-          Get Resume
+        Get Resume 
         </button>
       </div>
     </div>
@@ -52,7 +54,7 @@ const blogData = await useSanityClient().fetch(blogquery);
         <div class="max-w-sm border-gray-200 rounded-lg">
           <a
             href="/projects"
-            class="font-Roboto md:text-xl text-sm font-normal pt-8 pb-6  hover:text-slate-400"
+            class="font-Roboto md:text-xl text-sm font-normal pt-8 pb-6 hover:text-slate-400"
           >
             View All
           </a>
@@ -157,7 +159,6 @@ const blogData = await useSanityClient().fetch(blogquery);
                     />
                     <a
                       href={`/blogs/${projectItem.slug.current}`}
-
                       class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-buttonBg rounded-lg hover:bg-slate-500  hover:text-black focus:ring-4 focus:outline-none "
                     >
                       Read more
@@ -187,3 +188,24 @@ const blogData = await useSanityClient().fetch(blogquery);
     </div>
   </div>
 </section>
+
+<script is:inline>
+  function downloadResume() {
+    const resumeUrl = '/Resume.pdf'; // Adjust the path based on your actual file structure
+    
+    // Create a link element
+    const link = document.createElement('a');
+    link.href = resumeUrl;
+    link.target = '_blank'; // Open in a new tab
+    link.download = 'resume.pdf'; // Set the desired name for the downloaded file
+
+    // Append the link to the body
+    document.body.appendChild(link);
+
+    // Trigger a click on the link to start the download
+    link.click();
+
+    // Remove the link from the body
+    document.body.removeChild(link);
+  }
+</script>
