--- a/src/components/HomeLayout.astro
+++ b/src/components/HomeLayout.astro
@@ -26,7 +26,7 @@ const blogData = await useSanityClient().fetch(blogquery);
 
 <section class="home-section px-4 font-Roboto">
   <div class="container mx-auto">
-    <div class="grid grid-cols-1 text-center text-white">
+    <div class="grid grid-cols-1 md:gap-2 gap-12 text-center text-white">
       <div
         class="about_section border-e-red-50 flex flex-col items-center justify-center lg:p-24 p-0 m-10 md:m-24 font-Roboto"
       >
