--- a/src/components/ProjectsLayout/ProjectLayouts.astro
+++ b/src/components/ProjectsLayout/ProjectLayouts.astro
@@ -5,8 +5,10 @@ import { PortableText } from "astro-portabletext";
 const data = Astro.props;
 ---
 
-<section class="project-section container mx-auto md:px-0  px-4 py-4 font-Roboto">
-  <div class="grid md:grid-cols-2 grid-cols-1 gap-4  md:gap-4 mt-10">
+<section
+  class="project-section container mx-auto md:px-0 px-4 py-4 font-Roboto"
+>
+  <div class="grid md:grid-cols-2 grid-cols-1 gap-4 md:gap-4 mt-10">
     {
       data.projectData?.map((projectItem) => {
         return (
@@ -14,10 +16,9 @@ const data = Astro.props;
             <div class="project_container">
               <Link
                 href={`/projects/${projectItem.slug?.current}`}
-                
                 externalInNewTab={true}
               >
-                <div class="max-w-full rounded overflow-hidden shadow-lg projects-card  text-gray-700">
+                <div class="max-w-full rounded overflow-hidden shadow-lg projects-card h-auto flex-col text-gray-700">
                   <img
                     class="w-full "
                     src={`${projectItem?.BackgroundImage?.asset?.url}`}
@@ -25,35 +26,34 @@ const data = Astro.props;
                   />
                   <div class="info-section px-4">
                     <div class="py-4 ">
-                    <div class="font-Roboto font-normal md:text-2xl text-sm mb-2">
-                      {projectItem?.projectName}
+                      <div class="font-Roboto font-normal md:text-2xl text-sm mb-2">
+                        {projectItem?.projectName}
+                      </div>
+                      <p class=" text-base  font-Roboto font-normal">
+                        <PortableText
+                          class="font-normal md:text-sm text-sm mb-2 font-Roboto "
+                          value={projectItem?.excerpt}
+                        />
+                      </p>
                     </div>
-                    <p class=" text-base  font-Roboto font-normal">
-                      <PortableText
-                        class="font-normal md:text-sm text-sm mb-2 font-Roboto "
-                        value={projectItem?.excerpt}
-                      />
-                    </p>
-                  </div>
-                  <div>
-                    {projectItem?.tags?.map((tagsItem) => {
-                      return (
-                        <>
-                          <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-bae font-medium font-Roboto mr-2 mb-2">
-                            {tagsItem}
-                          </span>
-                        </>
-                      );
-                    })}
-                  </div>
-                  <div class="py-4">
-                    <a href={projectItem?.gitHubLink?.current}>Github link</a>
-                    &nbsp;|&nbsp;
-                    <a href={projectItem?.demoLink?.current}>Demo Link</a>
-                    &nbsp;|&nbsp;
-                  </div>
+                    <div>
+                      {projectItem?.tags?.map((tagsItem) => {
+                        return (
+                          <>
+                            <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-bae font-medium font-Roboto mr-2 mb-2">
+                              {tagsItem}
+                            </span>
+                          </>
+                        );
+                      })}
                     </div>
-               
+                    <div class="py-4">
+                      <a href={projectItem?.gitHubLink?.current}>Github link</a>
+                      &nbsp;|&nbsp;
+                      <a href={projectItem?.demoLink?.current}>Demo Link</a>
+                      &nbsp;|&nbsp;
+                    </div>
+                  </div>
                 </div>
               </Link>
             </div>
