--- a/src/components/BlogLayout/BlogDetails.astro
+++ b/src/components/BlogLayout/BlogDetails.astro
@@ -2,44 +2,69 @@
 const data = Astro.props;
 import { Link } from "astro-link";
 import { PortableText } from "astro-portabletext";
-
-console.log("Details", data);
 ---
 
-<section class="blog_details font-Roboto container mx-auto overflow-hidden md:p-12 px-2">
-  <div class="grid md:grid-cols-3 grid-cols-1 md:gap-12">
-    <div class="left-section col-span-2 text-white">
-      <h1 class="md:text-3xl text-xl font-Roboto py-4 md:text-left  text-center">
-        {data?.detailsData?.projectName}
-      </h1>
-      <img src={`${data?.detailsData?.BackgroundImage?.asset?.url}`} />
-      <div class="px-4 py-4">
-        <PortableText
-          class="md:text-lg text-base py-1 text-pretty mb-2 font-Roboto blog-content"
-          value={data?.detailsData?.blogcontent}
-        />
+<main
+  class="pt-8 pb-16 lg:pt-16 lg:pb-24 bg-transparent text-white antialiased"
+>
+  <div class="flex justify-between px-4 mx-auto max-w-screen-xl">
+    <article
+      class="mx-auto w-full max-w-2xl format format-sm sm:format-base lg:format-lg format-blue dark:format-invert"
+    >
+      <header class="mb-4 lg:mb-6 not-format">
+        <h1
+          class="mb-4 text-3xl font-extrabold leading-tightlg:mb-6 lg:text-4xl dark:text-white"
+        >
+          {data?.detailsData?.projectName}
+        </h1>
+      </header>
+
+      <figure>
+        <img src={`${data?.detailsData?.BackgroundImage?.asset?.url}`} alt="" />
+      </figure>
+      <p>
+        <p>
+          <PortableText
+            class="md:text-lg text-base py-1 text-pretty mb-2 font-Roboto blog-content"
+            value={data?.detailsData?.blogcontent}
+          />
+        </p>
+      </p>
+    </article>
+  </div>
+
+  <!-- <aside
+    aria-label="Related articles"
+    class="py-8 lg:py-24 bg-transparent dark:bg-gray-800 text-white"
+  >
+    <div class="px-4 mx-auto max-w-screen-xl">
+      <h2 class="mb-8 text-2xl font-bold text-white dark:text-white">
+        Related articles
+      </h2>
+      <div class="grid gap-12 sm:grid-cols-2 lg:grid-cols-4">
+        <article class="max-w-xs">
+          <Link href={`/blogs/${data?.detailsData?.slug?.current}`}>
+            <h2 class="mb-2 text-xl font-bold leading-tight dark:text-white">
+              <a href="#"> {data?.detailsData?.projectName}</a>
+            </h2>
+            <img
+              src={`${data?.detailsData?.BackgroundImage?.asset?.url}`}
+              class="col-span-1 w-full rounded-sm text-white"
+            />
+            <PortableText
+              class="md:text-lg text-base py-1 text-pretty mb-2 font-Roboto blog-content truncate overflow-hidden line-clamp-5 ... dark:text-white"
+              value={data?.detailsData?.excerpt}
+            />
+
+            <a
+              href={`/blogs/${data?.detailsData?.slug?.current}`}
+              class="inline-flex items-center font-medium underline underline-offset-4 text-primary-600 dark:text-primary-500 hover:no-underline"
+            >
+              Read in 2 minutes
+            </a>
+          </Link>
+        </article>
       </div>
     </div>
-    <div class="right-section col-span-1   text-white">
-      <h1 class="text-3xl font-Roboto py-4 md:text-left text-center">
-        Popular Blogs
-      </h1>
-      <Link 
-      href={`/blogs/${data?.detailsData?.slug?.current}`}
-
-      >
-        <div class="grid md:grid-cols-2 grid-cols-1 justify-center gap-4">
-          <img
-            src={`${data?.detailsData?.BackgroundImage?.asset?.url}`}
-            class="col-span-1 w-full rounded-sm"
-          />
-          <div class="col-span-1 justify-start">
-            <h1 class="text-xl font-roboto md:text-left text-center">
-              {data?.detailsData?.projectName}
-            </h1>
-          </div>
-        </div><Link
-      >
-    </div>
-  </div>
-</section>
+  </aside> -->
+</main>
